k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  labels:
    app: spring-petclinic
spec:
  type: ClusterIP
  selector:
    app: spring-petclinic
  ports:
    - name: http
      port: 80
      targetPort: 8080
